@@ -11,20 +11,17 @@ import java.util.List;
 import java.util.Optional;
 import java.util.function.Supplier;
 
-import static java.time.Month.APRIL;
-import static java.util.stream.Collectors.toList;
-
 /**
  * Implementation of {@link AccountService}.
  */
 @Service
-public class AccountServiceImpl implements AccountService {
+class AccountServiceImpl implements AccountService {
 
     private final AccountRepository accountRepository;
     private final SettingsService settingsService;
 
     @Autowired
-    public AccountServiceImpl(AccountRepository accountRepository, SettingsService settingsService) {
+    AccountServiceImpl(AccountRepository accountRepository, SettingsService settingsService) {
         this.accountRepository = accountRepository;
         this.settingsService = settingsService;
     }
@@ -41,19 +38,18 @@ public class AccountServiceImpl implements AccountService {
         final boolean expiresGlobally = remainingVacationDaysExpireGlobally();
         final Boolean expiresLocally = prevYearAccount.map(Account::isDoRemainingVacationDaysExpireLocally).orElse(null);
 
-        final LocalDate defaultExpiryDate = LocalDate.of(year, APRIL, 1);
-
-        final LocalDate expiryDate = (expiresLocally != null && expiresLocally) || (expiresLocally == null && expiresGlobally)
-            ? prevYearAccount.map(Account::getExpiryDate).map(date -> date.withYear(year)).orElse(defaultExpiryDate)
-            : defaultExpiryDate;
+        final LocalDate expiryMonthDay = globallyExpiryDate(Year.of(year));
+        final LocalDate expiryDateGlobally = LocalDate.of(year, expiryMonthDay.getMonth(), expiryMonthDay.getDayOfMonth());
+        final LocalDate expiryDateLocally = prevYearAccount.map(Account::getExpiryDateLocally).map(date -> date.withYear(year)).orElse(null);
 
         return AccountDraft.builder()
             .person(person)
             .year(Year.of(year))
             .annualVacationDays(prevYearAccount.map(Account::getAnnualVacationDays).orElse(null))
-            .doRemainingVacationDaysExpireLocally(expiresLocally)
             .doRemainingVacationDaysExpireGlobally(expiresGlobally)
-            .expiryDate(expiryDate)
+            .doRemainingVacationDaysExpireLocally(expiresLocally)
+            .expiryDateGlobally(expiryDateGlobally)
+            .expiryDateLocally(expiryDateLocally)
             .setRemainingVacationDaysNotExpiring(prevYearAccount.map(Account::getRemainingVacationDaysNotExpiring).orElse(null))
             .build();
     }
@@ -61,33 +57,24 @@ public class AccountServiceImpl implements AccountService {
     @Override
     public List<Account> getHolidaysAccount(int year, List<Person> persons) {
         final CachedSupplier<Boolean> expireGlobally = new CachedSupplier<>(this::remainingVacationDaysExpireGlobally);
+        final CachedSupplier<LocalDate> expiryDateGlobally = new CachedSupplier<>(() -> globallyExpiryDate(Year.of(year)));
 
         return accountRepository.findAccountByYearAndPersons(year, persons)
             .stream()
-            .map(accountEntity -> this.mapToAccount(accountEntity, expireGlobally.get()))
-            .collect(toList());
+            .map(accountEntity -> this.mapToAccount(accountEntity, expireGlobally.get(), expiryDateGlobally.get()))
+            .toList();
     }
 
     @Override
     public Account save(Account account) {
         final AccountEntity accountEntity = mapToAccountEntity(account);
-
-        if (!account.doRemainingVacationDaysExpire() && account.getExpiryDate() == null) {
-            // expiry_date has a notNull constraint in the database.
-            // therefore we're looking for the previous expiryDate or using a fallback by german law.
-
-            final LocalDate expiryDate = getHolidaysAccount(account.getYear() - 1, account.getPerson())
-                .map(Account::getExpiryDate)
-                .orElse(LocalDate.of(account.getYear() - 1, APRIL, 1));
-
-            accountEntity.setExpiryDate(expiryDate.withYear(account.getYear()));
-        }
-
         final AccountEntity savedAccountEntity = accountRepository.save(accountEntity);
-        return mapToAccount(savedAccountEntity, remainingVacationDaysExpireGlobally());
+
+        final LocalDate expiryDateGlobally = globallyExpiryDate(Year.of(savedAccountEntity.getYear()));
+        return mapToAccount(savedAccountEntity, remainingVacationDaysExpireGlobally(), expiryDateGlobally);
     }
 
-    private Account mapToAccount(AccountEntity accountEntity, boolean doRemainingVacationDaysExpireGlobally) {
+    private Account mapToAccount(AccountEntity accountEntity, boolean doRemainingVacationDaysExpireGlobally, LocalDate expiryDateGlobally) {
         final Account account = new Account(
             accountEntity.getPerson(),
             accountEntity.getValidFrom(),
@@ -103,6 +90,7 @@ public class AccountServiceImpl implements AccountService {
         account.setExpiryNotificationSentDate(accountEntity.getExpiryNotificationSentDate());
         account.setActualVacationDays(accountEntity.getActualVacationDays());
         account.setDoRemainingVacationDaysExpireGlobally(doRemainingVacationDaysExpireGlobally);
+        account.setExpiryDateGlobally(expiryDateGlobally);
         return account;
     }
 
@@ -112,7 +100,7 @@ public class AccountServiceImpl implements AccountService {
             account.getValidFrom(),
             account.getValidTo(),
             account.isDoRemainingVacationDaysExpireLocally(),
-            account.getExpiryDate(),
+            account.getExpiryDateLocally(),
             account.getAnnualVacationDays(),
             account.getRemainingVacationDays(),
             account.getRemainingVacationDaysNotExpiring(),
@@ -131,6 +119,10 @@ public class AccountServiceImpl implements AccountService {
 
     private boolean remainingVacationDaysExpireGlobally() {
         return settingsService.getSettings().getAccountSettings().isDoRemainingVacationDaysExpireGlobally();
+    }
+
+    private LocalDate globallyExpiryDate(Year year) {
+        return settingsService.getSettings().getAccountSettings().getExpiryDateForYear(year);
     }
 
     private static class CachedSupplier<T> implements Supplier<T> {
